fiddling with package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employeetable",
+  "name": "employe-directory",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -17,6 +17,8 @@
     "react-table": "^6.10.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
